Fixes text cutting and overflow in the intro section and devices smaller than 375px

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,16 @@ header.singleNav nav ul {
       background-size: 20rem;
     }
 
+  .intro {
+    margin-top: calc(2.5rem + var(--spacing-medium) * 2);
+    height: auto;
+    min-height: calc(100vh - (2.5rem + var(--spacing-medium) * 2));
+  }
+
 }
 
 @media only screen and (max-width: 375px) {
+  body {
+    min-width: unset;
+  }
 }
